src/tests/fixtures/arguments/NoTypeAnnotation.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class SomeType {
  /** @gqlField */
  hello(args): string {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/arguments/NoTypeAnnotation.invalid.ts:4:9 - error: Expected GraphQL field arguments to have an explicit type annotation. If there are no arguments, you may omit the args argument. Grats needs to be able to see the type of the arguments to generate a GraphQL schema.

4   hello(args): string {
          ~~~~
